Big re-arrangement of files and functions

--- a/example2/Low-rank EnKF Vortex simple test.ipynb
+++ b/example2/Low-rank EnKF Vortex simple test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -10,7 +10,71 @@
      "output_type": "stream",
      "text": [
       "┌ Info: Precompiling LowRankVortex [fdf095b8-6f21-420b-9d49-8e692abb03d1]\n",
-      "└ @ Base loading.jl:1664\n"
+      "└ @ Base loading.jl:1664\n",
+      "\u001b[91m\u001b[1mERROR: \u001b[22m\u001b[39mLoadError: SystemError: opening file \"/Users/jeff/JuliaProjects/LowRankVortex/src/cylinder/tools.jl\": No such file or directory\n",
+      "Stacktrace:\n",
+      "  [1] \u001b[0m\u001b[1msystemerror\u001b[22m\u001b[0m\u001b[1m(\u001b[22m\u001b[90mp\u001b[39m::\u001b[0mString, \u001b[90merrno\u001b[39m::\u001b[0mInt32; \u001b[90mextrainfo\u001b[39m::\u001b[0mNothing\u001b[0m\u001b[1m)\u001b[22m\n",
+      "\u001b[90m    @ \u001b[39m\u001b[90mBase\u001b[39m \u001b[90m./\u001b[39m\u001b[90m\u001b[4merror.jl:176\u001b[24m\u001b[39m\n",
+      "  [2] \u001b[0m\u001b[1m#systemerror#80\u001b[22m\n",
+      "\u001b[90m    @ \u001b[39m\u001b[90m./\u001b[39m\u001b[90m\u001b[4merror.jl:175\u001b[24m\u001b[39m\u001b[90m [inlined]\u001b[39m\n",
+      "  [3] \u001b[0m\u001b[1msystemerror\u001b[22m\n",
+      "\u001b[90m    @ \u001b[39m\u001b[90m./\u001b[39m\u001b[90m\u001b[4merror.jl:175\u001b[24m\u001b[39m\u001b[90m [inlined]\u001b[39m\n",
+      "  [4] \u001b[0m\u001b[1mopen\u001b[22m\u001b[0m\u001b[1m(\u001b[22m\u001b[90mfname\u001b[39m::\u001b[0mString; \u001b[90mlock\u001b[39m::\u001b[0mBool, \u001b[90mread\u001b[39m::\u001b[0mNothing, \u001b[90mwrite\u001b[39m::\u001b[0mNothing, \u001b[90mcreate\u001b[39m::\u001b[0mNothing, \u001b[90mtruncate\u001b[39m::\u001b[0mNothing, \u001b[90mappend\u001b[39m::\u001b[0mNothing\u001b[0m\u001b[1m)\u001b[22m\n",
+      "\u001b[90m    @ \u001b[39m\u001b[90mBase\u001b[39m \u001b[90m./\u001b[39m\u001b[90m\u001b[4miostream.jl:293\u001b[24m\u001b[39m\n",
+      "  [5] \u001b[0m\u001b[1mopen\u001b[22m\n",
+      "\u001b[90m    @ \u001b[39m\u001b[90m./\u001b[39m\u001b[90m\u001b[4miostream.jl:275\u001b[24m\u001b[39m\u001b[90m [inlined]\u001b[39m\n",
+      "  [6] \u001b[0m\u001b[1mopen\u001b[22m\u001b[0m\u001b[1m(\u001b[22m\u001b[90mf\u001b[39m::\u001b[0mBase.var\"#387#388\"\u001b[90m{String}\u001b[39m, \u001b[90margs\u001b[39m::\u001b[0mString; \u001b[90mkwargs\u001b[39m::\u001b[0mBase.Pairs\u001b[90m{Symbol, Union{}, Tuple{}, NamedTuple{(), Tuple{}}}\u001b[39m\u001b[0m\u001b[1m)\u001b[22m\n",
+      "\u001b[90m    @ \u001b[39m\u001b[90mBase\u001b[39m \u001b[90m./\u001b[39m\u001b[90m\u001b[4mio.jl:382\u001b[24m\u001b[39m\n",
+      "  [7] \u001b[0m\u001b[1mopen\u001b[22m\n",
+      "\u001b[90m    @ \u001b[39m\u001b[90m./\u001b[39m\u001b[90m\u001b[4mio.jl:381\u001b[24m\u001b[39m\u001b[90m [inlined]\u001b[39m\n",
+      "  [8] \u001b[0m\u001b[1mread\u001b[22m\n",
+      "\u001b[90m    @ \u001b[39m\u001b[90m./\u001b[39m\u001b[90m\u001b[4mio.jl:462\u001b[24m\u001b[39m\u001b[90m [inlined]\u001b[39m\n",
+      "  [9] \u001b[0m\u001b[1m_include\u001b[22m\u001b[0m\u001b[1m(\u001b[22m\u001b[90mmapexpr\u001b[39m::\u001b[0mFunction, \u001b[90mmod\u001b[39m::\u001b[0mModule, \u001b[90m_path\u001b[39m::\u001b[0mString\u001b[0m\u001b[1m)\u001b[22m\n",
+      "\u001b[90m    @ \u001b[39m\u001b[90mBase\u001b[39m \u001b[90m./\u001b[39m\u001b[90m\u001b[4mloading.jl:1484\u001b[24m\u001b[39m\n",
+      " [10] \u001b[0m\u001b[1minclude\u001b[22m\u001b[0m\u001b[1m(\u001b[22m\u001b[90mmod\u001b[39m::\u001b[0mModule, \u001b[90m_path\u001b[39m::\u001b[0mString\u001b[0m\u001b[1m)\u001b[22m\n",
+      "\u001b[90m    @ \u001b[39m\u001b[90mBase\u001b[39m \u001b[90m./\u001b[39m\u001b[90m\u001b[4mBase.jl:419\u001b[24m\u001b[39m\n",
+      " [11] \u001b[0m\u001b[1minclude\u001b[22m\u001b[0m\u001b[1m(\u001b[22m\u001b[90mx\u001b[39m::\u001b[0mString\u001b[0m\u001b[1m)\u001b[22m\n",
+      "\u001b[90m    @ \u001b[39m\u001b[35mLowRankVortex\u001b[39m \u001b[90m~/JuliaProjects/LowRankVortex/src/\u001b[39m\u001b[90m\u001b[4mLowRankVortex.jl:1\u001b[24m\u001b[39m\n",
+      " [12] top-level scope\n",
+      "\u001b[90m    @ \u001b[39m\u001b[90m~/JuliaProjects/LowRankVortex/src/\u001b[39m\u001b[90m\u001b[4mLowRankVortex.jl:51\u001b[24m\u001b[39m\n",
+      " [13] \u001b[0m\u001b[1minclude\u001b[22m\n",
+      "\u001b[90m    @ \u001b[39m\u001b[90m./\u001b[39m\u001b[90m\u001b[4mBase.jl:419\u001b[24m\u001b[39m\u001b[90m [inlined]\u001b[39m\n",
+      " [14] \u001b[0m\u001b[1minclude_package_for_output\u001b[22m\u001b[0m\u001b[1m(\u001b[22m\u001b[90mpkg\u001b[39m::\u001b[0mBase.PkgId, \u001b[90minput\u001b[39m::\u001b[0mString, \u001b[90mdepot_path\u001b[39m::\u001b[0mVector\u001b[90m{String}\u001b[39m, \u001b[90mdl_load_path\u001b[39m::\u001b[0mVector\u001b[90m{String}\u001b[39m, \u001b[90mload_path\u001b[39m::\u001b[0mVector\u001b[90m{String}\u001b[39m, \u001b[90mconcrete_deps\u001b[39m::\u001b[0mVector\u001b[90m{Pair{Base.PkgId, UInt64}}\u001b[39m, \u001b[90msource\u001b[39m::\u001b[0mNothing\u001b[0m\u001b[1m)\u001b[22m\n",
+      "\u001b[90m    @ \u001b[39m\u001b[90mBase\u001b[39m \u001b[90m./\u001b[39m\u001b[90m\u001b[4mloading.jl:1554\u001b[24m\u001b[39m\n",
+      " [15] top-level scope\n",
+      "\u001b[90m    @ \u001b[39m\u001b[90m\u001b[4mstdin:1\u001b[24m\u001b[39m\n",
+      "in expression starting at /Users/jeff/JuliaProjects/LowRankVortex/src/LowRankVortex.jl:1\n",
+      "in expression starting at stdin:1\n"
+     ]
+    },
+    {
+     "ename": "LoadError",
+     "evalue": "Failed to precompile LowRankVortex [fdf095b8-6f21-420b-9d49-8e692abb03d1] to /Users/jeff/.julia/compiled/v1.8/LowRankVortex/jl_ZyCddV.",
+     "output_type": "error",
+     "traceback": [
+      "Failed to precompile LowRankVortex [fdf095b8-6f21-420b-9d49-8e692abb03d1] to /Users/jeff/.julia/compiled/v1.8/LowRankVortex/jl_ZyCddV.",
+      "",
+      "Stacktrace:",
+      "  [1] error(s::String)",
+      "    @ Base ./error.jl:35",
+      "  [2] compilecache(pkg::Base.PkgId, path::String, internal_stderr::IO, internal_stdout::IO, keep_loaded_modules::Bool)",
+      "    @ Base ./loading.jl:1707",
+      "  [3] compilecache",
+      "    @ ./loading.jl:1651 [inlined]",
+      "  [4] _require(pkg::Base.PkgId)",
+      "    @ Base ./loading.jl:1337",
+      "  [5] _require_prelocked(uuidkey::Base.PkgId)",
+      "    @ Base ./loading.jl:1200",
+      "  [6] macro expansion",
+      "    @ ./loading.jl:1180 [inlined]",
+      "  [7] macro expansion",
+      "    @ ./lock.jl:223 [inlined]",
+      "  [8] require(into::Module, mod::Symbol)",
+      "    @ Base ./loading.jl:1144",
+      "  [9] eval",
+      "    @ ./boot.jl:368 [inlined]",
+      " [10] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
+      "    @ Base ./loading.jl:1428"
      ]
     }
    ],
