--- a/example2/Low-rank EnKF Vortex simple test.ipynb
+++ b/example2/Low-rank EnKF Vortex simple test.ipynb
@@ -5160,6 +5160,14 @@
      "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "┌ Warning: /Users/jeff/JuliaProjects/LowRankVortex/src/cylinder is not an existing directory, Revise is not watching\n",
+      "└ @ Revise /Users/jeff/.julia/packages/Revise/do2nH/src/packagedef.jl:570\n"
+     ]
     }
    ],
    "source": [
