--- a/example2/Low-rank EnKF Vortex simple test.ipynb
+++ b/example2/Low-rank EnKF Vortex simple test.ipynb
@@ -86,437 +86,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4-element Vector{Int64}:\n",
-       " 1\n",
-       " 2\n",
-       " 3\n",
-       " 4"
+       "9-element Vector{Float64}:\n",
+       " -1.94975251902679\n",
+       "  2.6878933936065255\n",
+       "  0.350018032826632\n",
+       " -1.8680961940459455\n",
+       "  3.4440297987778203\n",
+       "  0.6797907891581474\n",
+       " -1.7672769666422392\n",
+       "  3.2148118930542307\n",
+       " -0.9036437910478621"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "A = [1,2,3,4]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "search: \u001b[0m\u001b[1mf\u001b[22m\u001b[0m\u001b[1mi\u001b[22m\u001b[0m\u001b[1mr\u001b[22m\u001b[0m\u001b[1ms\u001b[22m\u001b[0m\u001b[1mt\u001b[22m \u001b[0m\u001b[1mf\u001b[22m\u001b[0m\u001b[1mi\u001b[22m\u001b[0m\u001b[1mr\u001b[22m\u001b[0m\u001b[1ms\u001b[22m\u001b[0m\u001b[1mt\u001b[22mindex pop\u001b[0m\u001b[1mf\u001b[22m\u001b[0m\u001b[1mi\u001b[22m\u001b[0m\u001b[1mr\u001b[22m\u001b[0m\u001b[1ms\u001b[22m\u001b[0m\u001b[1mt\u001b[22m! push\u001b[0m\u001b[1mf\u001b[22m\u001b[0m\u001b[1mi\u001b[22m\u001b[0m\u001b[1mr\u001b[22m\u001b[0m\u001b[1ms\u001b[22m\u001b[0m\u001b[1mt\u001b[22m! uppercase\u001b[0m\u001b[1mf\u001b[22m\u001b[0m\u001b[1mi\u001b[22m\u001b[0m\u001b[1mr\u001b[22m\u001b[0m\u001b[1ms\u001b[22m\u001b[0m\u001b[1mt\u001b[22m lowercase\u001b[0m\u001b[1mf\u001b[22m\u001b[0m\u001b[1mi\u001b[22m\u001b[0m\u001b[1mr\u001b[22m\u001b[0m\u001b[1ms\u001b[22m\u001b[0m\u001b[1mt\u001b[22m\n",
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "text/latex": [
-       "\\begin{verbatim}\n",
-       "first(coll)\n",
-       "\\end{verbatim}\n",
-       "Get the first element of an iterable collection. Return the start point of an \\href{@ref}{\\texttt{AbstractRange}} even if it is empty.\n",
-       "\n",
-       "See also: \\href{@ref}{\\texttt{only}}, \\href{@ref}{\\texttt{firstindex}}, \\href{@ref}{\\texttt{last}}.\n",
-       "\n",
-       "\\section{Examples}\n",
-       "\\begin{verbatim}\n",
-       "julia> first(2:2:10)\n",
-       "2\n",
-       "\n",
-       "julia> first([1; 2; 3; 4])\n",
-       "1\n",
-       "\\end{verbatim}\n",
-       "\\rule{\\textwidth}{1pt}\n",
-       "\\begin{verbatim}\n",
-       "first(itr, n::Integer)\n",
-       "\\end{verbatim}\n",
-       "Get the first \\texttt{n} elements of the iterable collection \\texttt{itr}, or fewer elements if \\texttt{itr} is not long enough.\n",
-       "\n",
-       "See also: \\href{@ref}{\\texttt{startswith}}, \\href{@ref}{\\texttt{Iterators.take}}.\n",
-       "\n",
-       "\\begin{quote}\n",
-       "\\textbf{compat}\n",
-       "\n",
-       "Julia 1.6\n",
-       "\n",
-       "This method requires at least Julia 1.6.\n",
-       "\n",
-       "\\end{quote}\n",
-       "\\section{Examples}\n",
-       "\\begin{verbatim}\n",
-       "julia> first([\"foo\", \"bar\", \"qux\"], 2)\n",
-       "2-element Vector{String}:\n",
-       " \"foo\"\n",
-       " \"bar\"\n",
-       "\n",
-       "julia> first(1:6, 10)\n",
-       "1:6\n",
-       "\n",
-       "julia> first(Bool[], 1)\n",
-       "Bool[]\n",
-       "\\end{verbatim}\n",
-       "\\rule{\\textwidth}{1pt}\n",
-       "\\begin{verbatim}\n",
-       "first(s::AbstractString, n::Integer)\n",
-       "\\end{verbatim}\n",
-       "Get a string consisting of the first \\texttt{n} characters of \\texttt{s}.\n",
-       "\n",
-       "\\section{Examples}\n",
-       "\\begin{verbatim}\n",
-       "julia> first(\"∀ϵ≠0: ϵ²>0\", 0)\n",
-       "\"\"\n",
-       "\n",
-       "julia> first(\"∀ϵ≠0: ϵ²>0\", 1)\n",
-       "\"∀\"\n",
-       "\n",
-       "julia> first(\"∀ϵ≠0: ϵ²>0\", 3)\n",
-       "\"∀ϵ≠\"\n",
-       "\\end{verbatim}\n",
-       "\\rule{\\textwidth}{1pt}\n",
-       "\\begin{verbatim}\n",
-       "first(q::Deque)\n",
-       "\\end{verbatim}\n",
-       "Returns the first element of the deque \\texttt{q}.\n",
-       "\n",
-       "\\rule{\\textwidth}{1pt}\n",
-       "\\begin{verbatim}\n",
-       "first(D::CircularDeque)\n",
-       "\\end{verbatim}\n",
-       "Get the item at the front of the queue.\n",
-       "\n",
-       "\\rule{\\textwidth}{1pt}\n",
-       "\\begin{verbatim}\n",
-       "first(s::Stack)\n",
-       "\\end{verbatim}\n",
-       "Get the top item from the stack. Sometimes called peek.\n",
-       "\n",
-       "\\rule{\\textwidth}{1pt}\n",
-       "\\begin{verbatim}\n",
-       "first(h::BinaryHeap)\n",
-       "\\end{verbatim}\n",
-       "Returns the element at the top of the heap \\texttt{h}.\n",
-       "\n",
-       "\\rule{\\textwidth}{1pt}\n",
-       "\\begin{verbatim}\n",
-       "first(h::BinaryMinMaxHeap)\n",
-       "\\end{verbatim}\n",
-       "Get the first (minimum) of the heap.\n",
-       "\n",
-       "\\rule{\\textwidth}{1pt}\n",
-       "\\begin{verbatim}\n",
-       "first(sc)\n",
-       "\\end{verbatim}\n",
-       "Argument \\texttt{sc} is a SortedDict, SortedMultiDict or SortedSet. This function returns the first item (a \\texttt{k=>v} pair for SortedDict and SortedMultiDict or a key for SortedSet) according to the sorted order in the container. Thus, \\texttt{first(sc)} is equivalent to \\texttt{deref((sc,startof(sc)))}. It is an error to call this function on an empty container. Time: O(log \\emph{n})\n",
-       "\n",
-       "\\rule{\\textwidth}{1pt}\n",
-       "\\begin{verbatim}\n",
-       "first(sc)\n",
-       "\\end{verbatim}\n",
-       "Argument \\texttt{sc} is a SortedDict, SortedMultiDict or SortedSet. This function returns the first item (a \\texttt{k=>v} pair for SortedDict and SortedMultiDict or a key for SortedSet) according to the sorted order in the container. Thus, \\texttt{first(sc)} is equivalent to \\texttt{deref((sc,startof(sc)))}. It is an error to call this function on an empty container. Time: O(log \\emph{n})\n",
-       "\n",
-       "\\rule{\\textwidth}{1pt}\n",
-       "\\begin{verbatim}\n",
-       "first(sc)\n",
-       "\\end{verbatim}\n",
-       "Argument \\texttt{sc} is a SortedDict, SortedMultiDict or SortedSet. This function returns the first item (a \\texttt{k=>v} pair for SortedDict and SortedMultiDict or a key for SortedSet) according to the sorted order in the container. Thus, \\texttt{first(sc)} is equivalent to \\texttt{deref((sc,startof(sc)))}. It is an error to call this function on an empty container. Time: O(log \\emph{n})\n",
-       "\n",
-       "\\rule{\\textwidth}{1pt}\n",
-       "\\begin{verbatim}\n",
-       "first(cb::CircularBuffer)\n",
-       "\\end{verbatim}\n",
-       "Get the first element of CircularBuffer.\n",
-       "\n"
-      ],
-      "text/markdown": [
-       "```\n",
-       "first(coll)\n",
-       "```\n",
-       "\n",
-       "Get the first element of an iterable collection. Return the start point of an [`AbstractRange`](@ref) even if it is empty.\n",
-       "\n",
-       "See also: [`only`](@ref), [`firstindex`](@ref), [`last`](@ref).\n",
-       "\n",
-       "# Examples\n",
-       "\n",
-       "```jldoctest\n",
-       "julia> first(2:2:10)\n",
-       "2\n",
-       "\n",
-       "julia> first([1; 2; 3; 4])\n",
-       "1\n",
-       "```\n",
-       "\n",
-       "---\n",
-       "\n",
-       "```\n",
-       "first(itr, n::Integer)\n",
-       "```\n",
-       "\n",
-       "Get the first `n` elements of the iterable collection `itr`, or fewer elements if `itr` is not long enough.\n",
-       "\n",
-       "See also: [`startswith`](@ref), [`Iterators.take`](@ref).\n",
-       "\n",
-       "!!! compat \"Julia 1.6\"\n",
-       "    This method requires at least Julia 1.6.\n",
-       "\n",
-       "\n",
-       "# Examples\n",
-       "\n",
-       "```jldoctest\n",
-       "julia> first([\"foo\", \"bar\", \"qux\"], 2)\n",
-       "2-element Vector{String}:\n",
-       " \"foo\"\n",
-       " \"bar\"\n",
-       "\n",
-       "julia> first(1:6, 10)\n",
-       "1:6\n",
-       "\n",
-       "julia> first(Bool[], 1)\n",
-       "Bool[]\n",
-       "```\n",
-       "\n",
-       "---\n",
-       "\n",
-       "```\n",
-       "first(s::AbstractString, n::Integer)\n",
-       "```\n",
-       "\n",
-       "Get a string consisting of the first `n` characters of `s`.\n",
-       "\n",
-       "# Examples\n",
-       "\n",
-       "```jldoctest\n",
-       "julia> first(\"∀ϵ≠0: ϵ²>0\", 0)\n",
-       "\"\"\n",
-       "\n",
-       "julia> first(\"∀ϵ≠0: ϵ²>0\", 1)\n",
-       "\"∀\"\n",
-       "\n",
-       "julia> first(\"∀ϵ≠0: ϵ²>0\", 3)\n",
-       "\"∀ϵ≠\"\n",
-       "```\n",
-       "\n",
-       "---\n",
-       "\n",
-       "```\n",
-       "first(q::Deque)\n",
-       "```\n",
-       "\n",
-       "Returns the first element of the deque `q`.\n",
-       "\n",
-       "---\n",
-       "\n",
-       "```\n",
-       "first(D::CircularDeque)\n",
-       "```\n",
-       "\n",
-       "Get the item at the front of the queue.\n",
-       "\n",
-       "---\n",
-       "\n",
-       "```\n",
-       "first(s::Stack)\n",
-       "```\n",
-       "\n",
-       "Get the top item from the stack. Sometimes called peek.\n",
-       "\n",
-       "---\n",
-       "\n",
-       "```\n",
-       "first(h::BinaryHeap)\n",
-       "```\n",
-       "\n",
-       "Returns the element at the top of the heap `h`.\n",
-       "\n",
-       "---\n",
-       "\n",
-       "```\n",
-       "first(h::BinaryMinMaxHeap)\n",
-       "```\n",
-       "\n",
-       "Get the first (minimum) of the heap.\n",
-       "\n",
-       "---\n",
-       "\n",
-       "```\n",
-       "first(sc)\n",
-       "```\n",
-       "\n",
-       "Argument `sc` is a SortedDict, SortedMultiDict or SortedSet. This function returns the first item (a `k=>v` pair for SortedDict and SortedMultiDict or a key for SortedSet) according to the sorted order in the container. Thus, `first(sc)` is equivalent to `deref((sc,startof(sc)))`. It is an error to call this function on an empty container. Time: O(log *n*)\n",
-       "\n",
-       "---\n",
-       "\n",
-       "```\n",
-       "first(sc)\n",
-       "```\n",
-       "\n",
-       "Argument `sc` is a SortedDict, SortedMultiDict or SortedSet. This function returns the first item (a `k=>v` pair for SortedDict and SortedMultiDict or a key for SortedSet) according to the sorted order in the container. Thus, `first(sc)` is equivalent to `deref((sc,startof(sc)))`. It is an error to call this function on an empty container. Time: O(log *n*)\n",
-       "\n",
-       "---\n",
-       "\n",
-       "```\n",
-       "first(sc)\n",
-       "```\n",
-       "\n",
-       "Argument `sc` is a SortedDict, SortedMultiDict or SortedSet. This function returns the first item (a `k=>v` pair for SortedDict and SortedMultiDict or a key for SortedSet) according to the sorted order in the container. Thus, `first(sc)` is equivalent to `deref((sc,startof(sc)))`. It is an error to call this function on an empty container. Time: O(log *n*)\n",
-       "\n",
-       "---\n",
-       "\n",
-       "```\n",
-       "first(cb::CircularBuffer)\n",
-       "```\n",
-       "\n",
-       "Get the first element of CircularBuffer.\n"
-      ],
-      "text/plain": [
-       "\u001b[36m  first(coll)\u001b[39m\n",
-       "\n",
-       "  Get the first element of an iterable collection. Return the start point of\n",
-       "  an \u001b[36mAbstractRange\u001b[39m even if it is empty.\n",
-       "\n",
-       "  See also: \u001b[36monly\u001b[39m, \u001b[36mfirstindex\u001b[39m, \u001b[36mlast\u001b[39m.\n",
-       "\n",
-       "\u001b[1m  Examples\u001b[22m\n",
-       "\u001b[1m  ≡≡≡≡≡≡≡≡≡≡\u001b[22m\n",
-       "\n",
-       "\u001b[36m  julia> first(2:2:10)\u001b[39m\n",
-       "\u001b[36m  2\u001b[39m\n",
-       "\u001b[36m  \u001b[39m\n",
-       "\u001b[36m  julia> first([1; 2; 3; 4])\u001b[39m\n",
-       "\u001b[36m  1\u001b[39m\n",
-       "\n",
-       "  ────────────────────────────────────────────────────────────────────────────\n",
-       "\n",
-       "\u001b[36m  first(itr, n::Integer)\u001b[39m\n",
-       "\n",
-       "  Get the first \u001b[36mn\u001b[39m elements of the iterable collection \u001b[36mitr\u001b[39m, or fewer elements\n",
-       "  if \u001b[36mitr\u001b[39m is not long enough.\n",
-       "\n",
-       "  See also: \u001b[36mstartswith\u001b[39m, \u001b[36mIterators.take\u001b[39m.\n",
-       "\n",
-       "\u001b[39m\u001b[1m  │ \u001b[22m\u001b[39m\u001b[1mJulia 1.6\u001b[22m\n",
-       "\u001b[39m\u001b[1m  │\u001b[22m\n",
-       "\u001b[39m\u001b[1m  │\u001b[22m  This method requires at least Julia 1.6.\n",
-       "\n",
-       "\u001b[1m  Examples\u001b[22m\n",
-       "\u001b[1m  ≡≡≡≡≡≡≡≡≡≡\u001b[22m\n",
-       "\n",
-       "\u001b[36m  julia> first([\"foo\", \"bar\", \"qux\"], 2)\u001b[39m\n",
-       "\u001b[36m  2-element Vector{String}:\u001b[39m\n",
-       "\u001b[36m   \"foo\"\u001b[39m\n",
-       "\u001b[36m   \"bar\"\u001b[39m\n",
-       "\u001b[36m  \u001b[39m\n",
-       "\u001b[36m  julia> first(1:6, 10)\u001b[39m\n",
-       "\u001b[36m  1:6\u001b[39m\n",
-       "\u001b[36m  \u001b[39m\n",
-       "\u001b[36m  julia> first(Bool[], 1)\u001b[39m\n",
-       "\u001b[36m  Bool[]\u001b[39m\n",
-       "\n",
-       "  ────────────────────────────────────────────────────────────────────────────\n",
-       "\n",
-       "\u001b[36m  first(s::AbstractString, n::Integer)\u001b[39m\n",
-       "\n",
-       "  Get a string consisting of the first \u001b[36mn\u001b[39m characters of \u001b[36ms\u001b[39m.\n",
-       "\n",
-       "\u001b[1m  Examples\u001b[22m\n",
-       "\u001b[1m  ≡≡≡≡≡≡≡≡≡≡\u001b[22m\n",
-       "\n",
-       "\u001b[36m  julia> first(\"∀ϵ≠0: ϵ²>0\", 0)\u001b[39m\n",
-       "\u001b[36m  \"\"\u001b[39m\n",
-       "\u001b[36m  \u001b[39m\n",
-       "\u001b[36m  julia> first(\"∀ϵ≠0: ϵ²>0\", 1)\u001b[39m\n",
-       "\u001b[36m  \"∀\"\u001b[39m\n",
-       "\u001b[36m  \u001b[39m\n",
-       "\u001b[36m  julia> first(\"∀ϵ≠0: ϵ²>0\", 3)\u001b[39m\n",
-       "\u001b[36m  \"∀ϵ≠\"\u001b[39m\n",
-       "\n",
-       "  ────────────────────────────────────────────────────────────────────────────\n",
-       "\n",
-       "\u001b[36m  first(q::Deque)\u001b[39m\n",
-       "\n",
-       "  Returns the first element of the deque \u001b[36mq\u001b[39m.\n",
-       "\n",
-       "  ────────────────────────────────────────────────────────────────────────────\n",
-       "\n",
-       "\u001b[36m  first(D::CircularDeque)\u001b[39m\n",
-       "\n",
-       "  Get the item at the front of the queue.\n",
-       "\n",
-       "  ────────────────────────────────────────────────────────────────────────────\n",
-       "\n",
-       "\u001b[36m  first(s::Stack)\u001b[39m\n",
-       "\n",
-       "  Get the top item from the stack. Sometimes called peek.\n",
-       "\n",
-       "  ────────────────────────────────────────────────────────────────────────────\n",
-       "\n",
-       "\u001b[36m  first(h::BinaryHeap)\u001b[39m\n",
-       "\n",
-       "  Returns the element at the top of the heap \u001b[36mh\u001b[39m.\n",
-       "\n",
-       "  ────────────────────────────────────────────────────────────────────────────\n",
-       "\n",
-       "\u001b[36m  first(h::BinaryMinMaxHeap)\u001b[39m\n",
-       "\n",
-       "  Get the first (minimum) of the heap.\n",
-       "\n",
-       "  ────────────────────────────────────────────────────────────────────────────\n",
-       "\n",
-       "\u001b[36m  first(sc)\u001b[39m\n",
-       "\n",
-       "  Argument \u001b[36msc\u001b[39m is a SortedDict, SortedMultiDict or SortedSet. This function\n",
-       "  returns the first item (a \u001b[36mk=>v\u001b[39m pair for SortedDict and SortedMultiDict or a\n",
-       "  key for SortedSet) according to the sorted order in the container. Thus,\n",
-       "  \u001b[36mfirst(sc)\u001b[39m is equivalent to \u001b[36mderef((sc,startof(sc)))\u001b[39m. It is an error to call\n",
-       "  this function on an empty container. Time: O(log \u001b[4mn\u001b[24m)\n",
-       "\n",
-       "  ────────────────────────────────────────────────────────────────────────────\n",
-       "\n",
-       "\u001b[36m  first(sc)\u001b[39m\n",
-       "\n",
-       "  Argument \u001b[36msc\u001b[39m is a SortedDict, SortedMultiDict or SortedSet. This function\n",
-       "  returns the first item (a \u001b[36mk=>v\u001b[39m pair for SortedDict and SortedMultiDict or a\n",
-       "  key for SortedSet) according to the sorted order in the container. Thus,\n",
-       "  \u001b[36mfirst(sc)\u001b[39m is equivalent to \u001b[36mderef((sc,startof(sc)))\u001b[39m. It is an error to call\n",
-       "  this function on an empty container. Time: O(log \u001b[4mn\u001b[24m)\n",
-       "\n",
-       "  ────────────────────────────────────────────────────────────────────────────\n",
-       "\n",
-       "\u001b[36m  first(sc)\u001b[39m\n",
-       "\n",
-       "  Argument \u001b[36msc\u001b[39m is a SortedDict, SortedMultiDict or SortedSet. This function\n",
-       "  returns the first item (a \u001b[36mk=>v\u001b[39m pair for SortedDict and SortedMultiDict or a\n",
-       "  key for SortedSet) according to the sorted order in the container. Thus,\n",
-       "  \u001b[36mfirst(sc)\u001b[39m is equivalent to \u001b[36mderef((sc,startof(sc)))\u001b[39m. It is an error to call\n",
-       "  this function on an empty container. Time: O(log \u001b[4mn\u001b[24m)\n",
-       "\n",
-       "  ────────────────────────────────────────────────────────────────────────────\n",
-       "\n",
-       "\u001b[36m  first(cb::CircularBuffer)\u001b[39m\n",
-       "\n",
-       "  Get the first element of CircularBuffer."
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "?first"
+    "Nv = 3\n",
+    "  δ = 0.01\n",
+    "\n",
+    "z0 = complex(0.0)\n",
+    "  Γ0 = 1.0\n",
+    "\n",
+    "  zv = z0 .+ LowRankVortex.random_points_plane(Nv,-2.0,2.0,-2.0,2.0)\n",
+    "  Γv = -Γ0 .+ 2*Γ0*rand(Nv)\n",
+    "\n",
+    "a1 = 0.5; b1 = 0.1; ccoeff = ComplexF64[0.5(a1+b1),0,0.5(a1-b1)]\n",
+    "  b = Bodies.ConformalBody(ccoeff,ComplexF64(0.0),0.0)\n",
+    "\n",
+    "  config_data = VortexConfig(Nv, δ,body=b)\n",
+    "\n",
+    "  zv = LowRankVortex.random_points_unit_circle(Nv,(1.05,1.4),(0,2π))\n",
+    "  vort = Vortex.Blob.(zv,Γv,δ)\n",
+    "\n",
+    "  x = lagrange_to_state(vort,config_data)\n"
    ]
   },
   {
