--- a/stationary/Pressure for conformally mapped bodies.ipynb
+++ b/stationary/Pressure for conformally mapped bodies.ipynb
@@ -15,7 +15,16 @@
    "execution_count": 2,
    "id": "aefc88d5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "┌ Info: Precompiling LowRankVortex [fdf095b8-6f21-420b-9d49-8e692abb03d1]\n",
+      "└ @ Base loading.jl:1664\n"
+     ]
+    }
+   ],
    "source": [
     "using LowRankVortex"
    ]
@@ -54,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "1f3f761a",
    "metadata": {},
    "outputs": [],
@@ -757,15 +766,15 @@
    "lastKernelId": null
   },
   "kernelspec": {
-   "display_name": "Julia 1.7.1",
+   "display_name": "Julia 1.8.2",
    "language": "julia",
-   "name": "julia-1.7"
+   "name": "julia-1.8"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.7.1"
+   "version": "1.8.2"
   }
  },
  "nbformat": 4,
